--- a/MVC projekt Peole kutsumine/Web.config
+++ b/MVC projekt Peole kutsumine/Web.config
@@ -8,14 +8,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-	 <connectionStrings>
-		 	<add name="GuestContext" 
-				 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
-				 AttachDbFilename=C:\Users\Opilane\sourse\repos\MVC_projekt_Peole_kutsumine.Models.GuestContext.mdf;
-				 Initial Catalog=People;
-				 Integrated Security=True" 
-				 providerName="System.Data.SqlClient" />
-	 </connectionStrings>
+	<connectionStrings>
+		<add name="GuestContext"
+			 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
+                           AttachDbFilename=|DataDirectory|\GuestContext.mdf;
+                           Initial Catalog=GuestContext;
+                           Integrated Security=True"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -23,6 +23,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
+	  </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
